# dbq

./: .gitignore  .ocamlinit  AUTHORS.md  Makefile  README.md  dbquery.opam  dune-project
.github/workflows/: ci.yml
data/: bad1.dbq  bad2.dbq  chem_grades.csv  chem_grades2.csv  join1_table2.csv  join2_table1.csv  join2_table2.csv  required_join1.dbq  required_join2.dbq  required_project.dbq  required_rename.dbq  test1.dbq  test2.dbq  test3.dbq
lib/: ast.ml  ast.mli  dune  evaluator.ml  evaluator.mli  frontend.ml  frontend.mli  lexer.mll  parser.mly
test/: dune  test_dbquery.ml
